0.3.4 (2018-05-28)
 * #29: Add Semigroup instances (needed for GHC 8.4)

0.3.3 (2016-05-30)
 * Document precondition of occurrence > 0 on from*List functions.
 * #18: Compatibility with GHC 8.0
 * #13: Fix warnings about redundant imports
 * #22: Fixed warnings about unnecessary constraints

0.3.2: (2016-01-12)
 * #7: Work around doctest issue of ambiguous modules

0.3.1: (2016-01-11)
 * #4: Fix maxView to use deleteFindMax instead of deleteFindMin

0.3.0: (2015-06-29)
 * #3: Return Maybe instead of `fail`-ing in a monad 
