@@ -25,7 +25,7 @@ Library
   include-dirs:       include
   default-extensions: CPP
   ghc-options:        -Wall
-  build-depends:      containers >= 0.5, base >= 4 && < 5
+  build-depends:      containers >= 0.5, base >= 4 && < 5, deepseq >=1.2 && <1.5
 
 test-suite doctests
   default-language:   Haskell2010
